--- a/src/homepage.html
+++ b/src/homepage.html
@@ -2,16 +2,26 @@
 <html>
     <head>
         <title>website</title>
-        <link rel="stylesheet" href="homepage.css">
+        <link rel="stylesheet" href="../styles/homepage.css">
     </head>
 
     <body>
-        <nav>
-            <li><a href="https://www.google.com">home</a></li>
-            <li><a href="https://www.wikipedia.org">about</a></li>
-        </nav>
+        <div class="navbar">
+            <nav>
+                <li><a href="https://www.google.com">Home</a></li>
+                <li><a href="https://www.wikipedia.org">About</a></li>
+                <li><a href="https://www.wikipedia.org">Contact</a></li>
+            </nav>
+        </div>
         <h1 class="header-title">
-            my website portfolio
+            Hi! My name is James Vo.
         </h1>
+
+        <h2 class="about-me-brief">
+            Computer Science student with a passion for fullstack development.
+        </h2>
+        <h2 class="about-me-brief">
+            Studying at University of California, Irvine
+        </h2>
     </body>
 </html>
