--- a/src/homepage.html
+++ b/src/homepage.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>website</title>
+        <title>James Vo - Home</title>
         <link rel="stylesheet" href="../styles/homepage.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+        
     </head>
 
     <body>
-        <div class="navbar">
-            <nav>
-                <li><a href="https://www.google.com">Home</a></li>
-                <li><a href="https://www.wikipedia.org">About</a></li>
-                <li><a href="https://www.wikipedia.org">Contact</a></li>
-            </nav>
+        <!-- Nav Bar from bootstrap -->
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="homepage.html"><img src="../misc/james.jpg" alt="A professional taken picture of James Vo" class="navbar-image-logo"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#">Projects</a>
+                </div>
+            </div>
+        </nav>
+        <div class="homepage-main-content">
+            <h1 class="header-title">
+                Hi! My name is James Vo.
+            </h1>
+            <h2 class="about-me-brief">
+                Computer Science student with a passion for fullstack development.
+            </h2>
+            <h2 class="about-me-brief">
+                Studying at University of California, Irvine
+            </h2>  
         </div>
-        <h1 class="header-title">
-            Hi! My name is James Vo.
-        </h1>
-
-        <h2 class="about-me-brief">
-            Computer Science student with a passion for fullstack development.
-        </h2>
-        <h2 class="about-me-brief">
-            Studying at University of California, Irvine
-        </h2>
     </body>
 </html>
