minor changes to the homepage -added a box around the main content

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -25,15 +25,22 @@
             </div>
         </nav>
         <div class="homepage-main-content">
-            <h1 class="header-title">
-                Hi! My name is James Vo.
-            </h1>
-            <h2 class="about-me-brief">
-                Computer Science student with a passion for fullstack development.
-            </h2>
-            <h2 class="about-me-brief">
-                Studying at University of California, Irvine
-            </h2>  
+            <div id="inner">
+                <img src="../misc/james.jpg" alt="A professional taken photo of James Vo" class="homepage-main-content-image">
+                <div class="d-flex flex-column">
+                    <h1 class="header-title">
+                        Hi! My name is James Vo.
+                    </h1>
+                    <h2 class="about-me-brief">
+                        Computer Science student with a passion for fullstack development.
+                    </h2>
+                    <h2 class="about-me-brief">
+                        Studying at University of California, Irvine
+                    </h2>  
+                </div>
+                
+            </div>
+            
         </div>
     </body>
 </html>
