--- a/src/projects.html
+++ b/src/projects.html
@@ -3,7 +3,13 @@
     <head>
         <title>James Vo - Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../styles/homepage.css">
+        <meta charset="utf-8">
+        <meta name="author" content="James Vo">
+        <meta name="description" content="James' website portfolio">
+        <link rel="stylesheet" href="../styles/projects.css">
+        <link rel="stylesheet" href="../styles/navbar.css">
+        <link rel="stylesheet" href="../styles/all.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="../styles/all.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
@@ -20,8 +26,71 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="homepage.html">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-link" href="projects.html">Projects</a>
+                <a class="nav-link" href="experience.html">Experience</a>
             </div>
         </div>
     </nav>
+    <div class="card-deck">
+        <div class="card" style="width: 18rem;">
+            <div class="project-image">
+                <img class="card-img-top" src="../misc/database.png" alt="SQL Database picture">
+            </div>
+            <div class="card-body">
+                <h3 class="card-title"><a href="https://github.com/JustCasuallyJames/SQL-Database" target="_blank">SQL Database</a></h3>
+                <p class="card-text">Miniature relational database system written from scratch capable of utilizing SQL commands: Select, 
+                    Create, Insert, and Drop via the command line.</p>
+                <a href="https://github.com/JustCasuallyJames/SQL-Database" class="card-link" target="_blank"><i class="fab fa-github-square fa-3x fa-color"></i></a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="project-image">
+                <img class="card-img-top" src="../misc/dogelon-much.png" alt="Dogelon Much picture">
+            </div>
+            <div class="card-body">
+                <h3 class="card-title"><a href="https://github.com/JustCasuallyJames/dogelon-much" target="_blank">Dogelon Much</a></h3>
+                <p class="card-text">Dogelon Much is a dogecoin clicker simulator. The player starts off with a base amount of money and is able to buy and sell dogecoin by clicking it to earn profit. 
+                    The money you make will be used to buy rocket parts to send Elon Musk to the moon. 
+                    However, if the user clicks too many times the price of dogecoin may drop and the player may lose all of their profit.</p>
+                <a href="https://github.com/JustCasuallyJames/dogelon-much" class="card-link" target="_blank"><i class="fab fa-github-square fa-3x fa-color"></i></a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="project-image">
+                <img class="card-img-top" src="../misc/anime-database.png" alt="Anime Database Picture">
+            </div>
+            <div class="card-body">
+                <h3 class="card-title"><a href="https://github.com/JustCasuallyJames/animelist-v2" target="_blank">Anime Database</a></h3>
+                <p class="card-text">AnimeDatabase collects data from the Jikan API, an unofficial MyAnimeList API, and displays it to the AnimeDatabase website. 
+                    You're able to search up the top results of any anime you type and you're also able to look at the Top section which displays the Top results of certain categories 
+                    such as Manga and Upcoming Animes.</p>
+                <a href="https://github.com/JustCasuallyJames/animelist-v2" class="card-link" target="_blank"><i class="fab fa-github-square fa-3x fa-color"></i></a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="project-image">
+                <img class="card-img-top" src="../misc/Discord-bot.png" alt="Discord Bot">
+            </div>
+            <div class="card-body">
+                <h3 class="card-title"><a href="https://github.com/JustCasuallyJames/Scarlett-Discord-Bot" target="_blank">Scarlett Discord Bot</a></h3>
+                <p class="card-text">A discord messaging bot that allows users to play mini games as well as use their virtual currency
+                    to gain more virtual money. 
+                </p>
+                <a href="https://github.com/JustCasuallyJames/Scarlett-Discord-Bot" class="card-link" target="_blank"><i class="fab fa-github-square fa-3x fa-color"></i></a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="project-image">
+                <img class="card-img-top" src="../misc/graphing-calculator.png" alt="Graphing Calculator picture">
+            </div>
+            <div class="card-body">
+                <h3 class="card-title"><a href="https://github.com/JustCasuallyJames/Graphing-Calculator" target="_blank">Graphing Calculator</a></h3>
+                <p class="card-text">A graphing calculator made from scratch via C++ that is capable of obtaining functions from previous sessions
+                    and typeable functions. 
+                </p>
+                <a href="https://github.com/JustCasuallyJames/Graphing-Calculator" class="card-link" target="_blank"><i class="fab fa-github-square fa-3x fa-color"></i></a>
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
