Responsive design added, project cards are neatly placed
-the homepage now works with smaller devices which is good
-the projects page now looks better with other devices

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -22,20 +22,22 @@
                 <div class="navbar-nav">
                     <a class="nav-link" href="homepage.html">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-link" href="projects.html">Projects</a>
-                    <a class="nav-link" href="experience.html">Experience</a>
+                    <a href="https://drive.google.com/file/d/12nojPKihw36SDqhhp6lOgsHXGXy58EbY/view" class="nav-link" target="_blank">Resume</a>
                 </div>
             </div>
-        </nav>
-        <div class="homepage-main-content">
-            <div class="row">
-                <div class="col-4">
-                    <img src="../misc/james.jpg" alt="A professional taken photo of James Vo" class="homepage-main-content-image">
-                </div>
-                <div class="col-8">
+            </nav>
+        <div class="homepage-main-content d-flex align-content-center justify-content-center">
+            <div class="d-flex flex-column flex-md-row">
+                <img src="../misc/james.jpg" alt="A professional taken photo of James Vo" class="homepage-main-content-image">
+                <div class="right-side-text d-flex flex-column">
                     <h2 class="header-title">
                         Hi! My name is <strong>James Vo</strong>.
                         <br><br>
                         I am a Computer Science student at the University of California, Irvine, with a passion for fullstack development.
+                        <br><br>
+                        If you're interested in getting in contact with me or learn more about my projects, you can visit my 
+                        <a href="https://www.linkedin.com/in/james-vo-82971b1a9/">LinkedIn</a> or my 
+                        <a href="https://www.github.com/JustCasuallyJames">Github</a>.
                     </h2>
                 </div>        
             </div>
