--- a/src/projects.html
+++ b/src/projects.html
@@ -26,12 +26,19 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="homepage.html">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-link" href="projects.html">Projects</a>
-                <a class="nav-link" href="experience.html">Experience</a>
+                <a href="https://drive.google.com/file/d/12nojPKihw36SDqhhp6lOgsHXGXy58EbY/view" class="nav-link" target="_blank">Resume</a>
             </div>
         </div>
     </nav>
-    <div class="card-deck">
-        <div class="card" style="width: 18rem;">
+    <div class="card ml-4 mr-4 text-center">
+        <h1 class="card-header">Projects</h1>
+        <div class="card-body">
+            <h5 class="card-title">Here is a list of all the project's I've worked on. The button below is a link to all my repositories on Github.</h5>
+            <a href="https://github.com/JustCasuallyJames?tab=repositories" class="btn btn-primary" style="color: white;" target="_blank">Github</a>
+        </div>
+    </div>
+    <div class="row m-0">
+        <div class="card col-sm-10 col-md-10 col-lg-3 p-0" style="width: 18rem;">
             <div class="project-image">
                 <img class="card-img-top" src="../misc/database.png" alt="SQL Database picture">
             </div>
@@ -42,7 +49,7 @@
                 <a href="https://github.com/JustCasuallyJames/SQL-Database" class="card-link" target="_blank"><i class="fab fa-github-square fa-3x fa-color"></i></a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card col-sm-10 col-md-10 col-lg-3 p-0" style="width: 18rem;">
             <div class="project-image">
                 <img class="card-img-top" src="../misc/dogelon-much.png" alt="Dogelon Much picture">
             </div>
@@ -54,7 +61,7 @@
                 <a href="https://github.com/JustCasuallyJames/dogelon-much" class="card-link" target="_blank"><i class="fab fa-github-square fa-3x fa-color"></i></a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card col-sm-10 col-md-10 col-lg-3 p-0" style="width: 18rem;">
             <div class="project-image">
                 <img class="card-img-top" src="../misc/anime-database.png" alt="Anime Database Picture">
             </div>
@@ -66,7 +73,7 @@
                 <a href="https://github.com/JustCasuallyJames/animelist-v2" class="card-link" target="_blank"><i class="fab fa-github-square fa-3x fa-color"></i></a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card col-sm-10 col-md-10 col-lg-3 p-0" style="width: 18rem;">
             <div class="project-image">
                 <img class="card-img-top" src="../misc/Discord-bot.png" alt="Discord Bot">
             </div>
@@ -78,7 +85,7 @@
                 <a href="https://github.com/JustCasuallyJames/Scarlett-Discord-Bot" class="card-link" target="_blank"><i class="fab fa-github-square fa-3x fa-color"></i></a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card col-sm-10 col-md-10 col-lg-3 p-0" style="width: 18rem;">
             <div class="project-image">
                 <img class="card-img-top" src="../misc/graphing-calculator.png" alt="Graphing Calculator picture">
             </div>
@@ -91,6 +98,7 @@
             </div>
         </div>
     </div>
+        
     
 </body>
 </html>
