added external direction

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -3,6 +3,9 @@
     <head>
         <title>James Vo - Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8">
+        <meta name="author" content="James Vo">
+        <meta name="description" content="James' website portfolio">
         <link rel="stylesheet" href="../styles/homepage.css">
         <link rel="stylesheet" href="../styles/navbar.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -36,8 +39,8 @@
                         I am a Computer Science student at the University of California, Irvine, with a passion for fullstack development.
                         <br><br>
                         If you're interested in getting in contact with me or learn more about my projects, you can visit my 
-                        <a href="https://www.linkedin.com/in/james-vo-82971b1a9/">LinkedIn</a> or my 
-                        <a href="https://www.github.com/JustCasuallyJames">Github</a>.
+                        <a href="https://www.linkedin.com/in/james-vo-82971b1a9/" target="_blank">LinkedIn</a> or my 
+                        <a href="https://www.github.com/JustCasuallyJames" target="_blank">Github</a>.
                     </h2>
                 </div>        
             </div>
