Updated resume link

--- a/src/projects.html
+++ b/src/projects.html
@@ -25,14 +25,14 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="homepage.html">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-link" href="projects.html">Projects</a>
-                <a href="https://drive.google.com/file/d/12nojPKihw36SDqhhp6lOgsHXGXy58EbY/view" class="nav-link" target="_blank">Resume</a>
+                <a href="https://drive.google.com/file/d/1KOmAb9C1WaZLeTXQMG7pP9zZOyEQL6Si/view" class="nav-link" target="_blank">Resume</a>
             </div>
         </div>
     </nav>
     <div class="card ml-4 mr-4 text-center">
         <h1 class="card-header">Projects</h1>
         <div class="card-body">
-            <h5 class="card-title">Here is a list of all the project's I've worked on. The button below is a link to all my repositories on Github.</h5>
+            <h2 class="card-title">Here is a list of all the project's I've worked on. The button below is a link to all my repositories on Github.</h2>
             <a href="https://github.com/JustCasuallyJames?tab=repositories" class="btn btn-primary" style="color: white;" target="_blank">Github</a>
         </div>
     </div>
@@ -45,7 +45,7 @@
                 <h3 class="card-title"><a href="https://github.com/JustCasuallyJames/SQL-Database" target="_blank">SQL Database</a></h3>
                 <p class="card-text">Miniature relational database system written from scratch capable of utilizing SQL commands: Select, 
                     Create, Insert, and Drop via the command line.</p>
-                <a href="https://github.com/JustCasuallyJames/SQL-Database" class="card-link" target="_blank"><i class="fab fa-github-square fa-3x fa-color"></i></a>
+                <a href="https://github.com/JustCasuallyJames/SQL-Database" class="card-link" target="_blank" title="github logo link"><em class="fab fa-github-square fa-3x fa-color"></em></a>
             </div>
         </div>
         <div class="card col-sm-10 col-md-10 col-lg-3 p-0" style="width: 18rem;">
@@ -57,7 +57,7 @@
                 <p class="card-text">Dogelon Much is a dogecoin clicker simulator. The player starts off with a base amount of money and is able to buy and sell dogecoin by clicking it to earn profit. 
                     The money you make will be used to buy rocket parts to send Elon Musk to the moon. 
                     However, if the user clicks too many times the price of dogecoin may drop and the player may lose all of their profit.</p>
-                <a href="https://github.com/JustCasuallyJames/dogelon-much" class="card-link" target="_blank"><i class="fab fa-github-square fa-3x fa-color"></i></a>
+                <a href="https://github.com/JustCasuallyJames/dogelon-much" class="card-link" target="_blank" title="github logo link"><em class="fab fa-github-square fa-3x fa-color"></em></a>
             </div>
         </div>
         <div class="card col-sm-10 col-md-10 col-lg-3 p-0" style="width: 18rem;">
@@ -69,7 +69,7 @@
                 <p class="card-text">AnimeDatabase collects data from the Jikan API, an unofficial MyAnimeList API, and displays it to the AnimeDatabase website. 
                     You're able to search up the top results of any anime you type and you're also able to look at the Top section which displays the Top results of certain categories 
                     such as Manga and Upcoming Animes.</p>
-                <a href="https://github.com/JustCasuallyJames/animelist-v2" class="card-link" target="_blank"><i class="fab fa-github-square fa-3x fa-color"></i></a>
+                <a href="https://github.com/JustCasuallyJames/animelist-v2" class="card-link" target="_blank" title="github logo link"><em class="fab fa-github-square fa-3x fa-color"></em></a>
             </div>
         </div>
         <div class="card col-sm-10 col-md-10 col-lg-3 p-0" style="width: 18rem;">
@@ -81,7 +81,7 @@
                 <p class="card-text">A discord messaging bot that allows users to play mini games as well as use their virtual currency
                     to gain more virtual money. 
                 </p>
-                <a href="https://github.com/JustCasuallyJames/Scarlett-Discord-Bot" class="card-link" target="_blank"><i class="fab fa-github-square fa-3x fa-color"></i></a>
+                <a href="https://github.com/JustCasuallyJames/Scarlett-Discord-Bot" class="card-link" target="_blank" title="github logo link""><em class="fab fa-github-square fa-3x fa-color"></em></a>
             </div>
         </div>
         <div class="card col-sm-10 col-md-10 col-lg-3 p-0" style="width: 18rem;">
@@ -93,7 +93,7 @@
                 <p class="card-text">A graphing calculator made from scratch via C++ that is capable of obtaining functions from previous sessions
                     and typeable functions. 
                 </p>
-                <a href="https://github.com/JustCasuallyJames/Graphing-Calculator" class="card-link" target="_blank"><i class="fab fa-github-square fa-3x fa-color"></i></a>
+                <a href="https://github.com/JustCasuallyJames/Graphing-Calculator" class="card-link" target="_blank" title="github logo link"><em class="fab fa-github-square fa-3x fa-color"></em></i></a>
             </div>
         </div>
     </div>
