--- a/homepage.html
+++ b/homepage.html
@@ -6,8 +6,8 @@
         <meta charset="utf-8">
         <meta name="author" content="James Vo">
         <meta name="description" content="James' website portfolio">
-        <link rel="stylesheet" href="../styles/homepage.css">
-        <link rel="stylesheet" href="../styles/navbar.css">
+        <link rel="stylesheet" href="styles/homepage.css">
+        <link rel="stylesheet" href="styles/navbar.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
     <body>
         <!-- Nav Bar from bootstrap -->
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="homepage.html"><img src="../misc/james.jpg" alt="A professional taken picture of James Vo" class="navbar-image-logo"></a>
+            <a class="navbar-brand" href="homepage.html"><img src="misc/james.jpg" alt="A professional taken picture of James Vo" class="navbar-image-logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,7 +31,7 @@
             </nav>
         <div class="homepage-main-content d-flex align-content-center justify-content-center">
             <div class="d-flex flex-column flex-md-row">
-                <img src="../misc/james.jpg" alt="A professional taken photo of James Vo" class="homepage-main-content-image">
+                <img src="misc/james.jpg" alt="A professional taken photo of James Vo" class="homepage-main-content-image">
                 <div class="right-side-text d-flex flex-column">
                     <h2 class="header-title">
                         Hi! My name is <strong>James Vo</strong>.
