--- a/projects.html
+++ b/projects.html
@@ -6,9 +6,9 @@
         <meta charset="utf-8">
         <meta name="author" content="James Vo">
         <meta name="description" content="James' website portfolio">
-        <link rel="stylesheet" href="../styles/projects.css">
-        <link rel="stylesheet" href="../styles/navbar.css">
-        <link rel="stylesheet" href="../styles/all.min.css">
+        <link rel="stylesheet" href="styles/projects.css">
+        <link rel="stylesheet" href="styles/navbar.css">
+        <link rel="stylesheet" href="styles/all.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
 <body>
     <!-- Nav Bar from bootstrap -->
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="homepage.html"><img src="../misc/james.jpg" alt="A professional taken picture of James Vo" class="navbar-image-logo"></a>
+        <a class="navbar-brand" href="homepage.html"><img src="misc/james.jpg" alt="A professional taken picture of James Vo" class="navbar-image-logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -39,7 +39,7 @@
     <div class="row m-0">
         <div class="card col-sm-10 col-md-10 col-lg-3 p-0" style="width: 18rem;">
             <div class="project-image">
-                <img class="card-img-top" src="../misc/database.png" alt="SQL Database picture">
+                <img class="card-img-top" src="misc/database.png" alt="SQL Database picture">
             </div>
             <div class="card-body">
                 <h3 class="card-title"><a href="https://github.com/JustCasuallyJames/SQL-Database" target="_blank">SQL Database</a></h3>
@@ -50,7 +50,7 @@
         </div>
         <div class="card col-sm-10 col-md-10 col-lg-3 p-0" style="width: 18rem;">
             <div class="project-image">
-                <img class="card-img-top" src="../misc/dogelon-much.png" alt="Dogelon Much picture">
+                <img class="card-img-top" src="misc/dogelon-much.png" alt="Dogelon Much picture">
             </div>
             <div class="card-body">
                 <h3 class="card-title"><a href="https://github.com/JustCasuallyJames/dogelon-much" target="_blank">Dogelon Much</a></h3>
@@ -62,7 +62,7 @@
         </div>
         <div class="card col-sm-10 col-md-10 col-lg-3 p-0" style="width: 18rem;">
             <div class="project-image">
-                <img class="card-img-top" src="../misc/anime-database.png" alt="Anime Database Picture">
+                <img class="card-img-top" src="misc/anime-database.png" alt="Anime Database Picture">
             </div>
             <div class="card-body">
                 <h3 class="card-title"><a href="https://github.com/JustCasuallyJames/animelist-v2" target="_blank">Anime Database</a></h3>
@@ -74,7 +74,7 @@
         </div>
         <div class="card col-sm-10 col-md-10 col-lg-3 p-0" style="width: 18rem;">
             <div class="project-image">
-                <img class="card-img-top" src="../misc/Discord-bot.png" alt="Discord Bot">
+                <img class="card-img-top" src="misc/Discord-bot.png" alt="Discord Bot">
             </div>
             <div class="card-body">
                 <h3 class="card-title"><a href="https://github.com/JustCasuallyJames/Scarlett-Discord-Bot" target="_blank">Scarlett Discord Bot</a></h3>
@@ -86,7 +86,7 @@
         </div>
         <div class="card col-sm-10 col-md-10 col-lg-3 p-0" style="width: 18rem;">
             <div class="project-image">
-                <img class="card-img-top" src="../misc/graphing-calculator.png" alt="Graphing Calculator picture">
+                <img class="card-img-top" src="misc/graphing-calculator.png" alt="Graphing Calculator picture">
             </div>
             <div class="card-body">
                 <h3 class="card-title"><a href="https://github.com/JustCasuallyJames/Graphing-Calculator" target="_blank">Graphing Calculator</a></h3>
