--- a/homepage.html
+++ b/homepage.html
@@ -25,7 +25,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link" href="homepage.html">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-link" href="projects.html">Projects</a>
-                    <a href="https://drive.google.com/file/d/1exsONAXVH0F4BPsunOXsmSIrw9daBCeT/view" class="nav-link" target="_blank">Resume</a>
+                    <a href="https://drive.google.com/file/d/1exsONAXVH0F4BPsunOXsmSIrw9daBCeT/view?usp=sharing" class="nav-link" target="_blank">Resume</a>
                 </div>
             </div>
             </nav>
