Putting the website under construction

--- a/homepage.html
+++ b/homepage.html
@@ -8,9 +8,9 @@
         <meta name="description" content="James' website portfolio">
         <link rel="stylesheet" href="styles/homepage.css">
         <link rel="stylesheet" href="styles/navbar.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         
     </head>
 
@@ -23,14 +23,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="homepage.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-link" href="projects.html">Projects</a>
-                    <a href="https://drive.google.com/file/d/1aFQkQgx6s5hNJYGxe7EoN9r9pEbVtp6G/view?usp=sharing" class="nav-link" target="_blank">Resume</a>
+                    <a class="nav-link" href="homepage.html">Home</a>
+                    <!-- <a class="nav-link" href="projects.html">Projects</a> -->
+                    <!-- <a href="https://drive.google.com/file/d/1aFQkQgx6s5hNJYGxe7EoN9r9pEbVtp6G/view?usp=sharing" class="nav-link" target="_blank">Resume</a> -->
                 </div>
             </div>
             </nav>
-        <div class="homepage-main-content d-flex align-content-center justify-content-center">
-            <div class="d-flex flex-column flex-md-row">
+        <div class="homepage-main-content">
+            <!-- <div class="d-flex flex-column flex-md-row">
                 <img src="misc/james.jpg" alt="A professional taken photo of James Vo" class="homepage-main-content-image">
                 <div class="right-side-text d-flex flex-column">
                     <h2 class="header-title">
@@ -43,6 +43,39 @@
                         <a href="https://www.github.com/JustCasuallyJames" target="_blank">Github</a>.
                     </h2>
                 </div>        
+            </div> -->
+            <h1 class="under-construction text-center fw-bold p-4">
+                Under Construction
+            </h1>
+            <div class="card m-5 mt-0 mb-0">
+                <div class="card-body">
+                  Hi everyone! My name is James Vo and I'm currently an Associate Software Engineer at PlutoTV. I graduated from the University of California, Irvine with a Bachleor's in Computer Science. I understand this isn't what you wanted to see and that you wanted to perhaps see some of my projects that I have done over the years as a rising software engineer. Well, I have recently decided that the website deserves a new revamp! This is why now, I will be putting the website under construction for the time being while I work on my other website. 
+                  <br><br>
+                  <b>Here are some of the things that I want to do for the new revamp:</b>
+                  <ul>
+                    <li>
+                      Hoping to make the entire website using either a React web framework or React.
+                    </li>
+                    <li>
+                      Create a better project's page where it's all consistent in sizing
+                    </li>
+                    <li>
+                      Make the website more responsive
+                    </li>
+                  </ul>
+                  <b>Goals I have:</b>
+                  <ul>
+                    <li>
+                      Create a twitch bot that will assist me with most commands
+                    </li>
+                    <li>
+                      Continue with my discord bot so that it can be used to preserve my data
+                    </li>
+                    <li>
+                      Create a expenses tracking app that will help with tracking expenses
+                    </li>
+                  </ul>
+                </div>
             </div>
         </div>    
     </body>
