--- a/projects.html
+++ b/projects.html
@@ -6,12 +6,11 @@
         <meta charset="utf-8">
         <meta name="author" content="James Vo">
         <meta name="description" content="James' website portfolio">
-        <link rel="stylesheet" href="styles/projects.css">
+        <link rel="stylesheet" href="styles/homepage.css">
         <link rel="stylesheet" href="styles/navbar.css">
-        <link rel="stylesheet" href="styles/all.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         
     </head>
 <body>
@@ -23,7 +22,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="homepage.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="homepage.html">Home</a>
                 <a class="nav-link" href="projects.html">Projects</a>
                 <a href="https://drive.google.com/file/d/1KOmAb9C1WaZLeTXQMG7pP9zZOyEQL6Si/view" class="nav-link" target="_blank">Resume</a>
             </div>
