added linkedin and github links

--- a/homepage.html
+++ b/homepage.html
@@ -60,6 +60,9 @@
                       Create a better project's page where it's all consistent in sizing
                     </li>
                     <li>
+                      Add a timeline page for my experience
+                    </li>
+                    <li>
                       Make the website more responsive
                     </li>
                   </ul>
@@ -75,6 +78,9 @@
                       Create a expenses tracking app that will help with tracking expenses
                     </li>
                   </ul>
+                  Here is my 
+                  <a href="https://www.linkedin.com/in/jamesthienvo/" target="_blank">LinkedIn</a> or my 
+                  <a href="https://www.github.com/JustCasuallyJames" target="_blank">Github</a>.
                 </div>
             </div>
         </div>    
